--- a/_static/plotbrowser.css
+++ b/_static/plotbrowser.css
@@ -13,6 +13,15 @@ body {
     color: #333333;
 }
 
+hr {
+    border-top: 1px solid #ccc;
+    border-bottom: 0;
+    border-right: 0;
+    border-left: 0;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
 #wait_icon {
     visibility: visible;
     width: 25px;
